--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run build:server && npm run build:client",
     "build:server": "tsc -p server/tsconfig.json",
     "build:client": "cd client && npm run build",
-    "start": "node dist/server.js"
+    "start": "node dist/server/index.js"
   },
   "keywords": ["kanban", "project-management"],
   "author": "",
