--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
-    "outDir": "../dist",
+    "outDir": "../dist/server",
     "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
